Add scatter chart
